--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/joy": "^5.0.0-beta.48",
+    "chart.js": "^4.4.7",
     "framer-motion": "^11.15.0",
     "motion": "^11.15.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router": "^7.0.2"
+    "react-router": "^7.0.2",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
