--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/joy": "^5.0.0-beta.48",
     "chart.js": "^4.4.7",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "framer-motion": "^11.15.0",
     "motion": "^11.15.0",
     "react": "^18.3.1",
