--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^6.2.1",
     "chart.js": "^4.4.7",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.15.0",
     "motion": "^11.15.0",
+    "primereact": "^10.8.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
