--- a/developer-dashboard-frontend/data/package.json
+++ b/developer-dashboard-frontend/data/package.json
@@ -25,8 +25,10 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
