--- a/developer-dashboard-frontend/data/package.json
+++ b/developer-dashboard-frontend/data/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.2.1",
+    "@reduxjs/toolkit": "^2.5.1",
     "antd": "^5.24.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
