--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install-all": "npm install --prefix backend && npm install --prefix frontend",
-    "build": "npm run build --prefix frontend",
-    "start": "node backend/server.js",
-    "dev": "concurrently \"npm run dev --prefix backend\" \"npm start --prefix frontend\""
- 
+    "install-all": "npm install --prefix backend && npm install --prefix frontend/data",
+    "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend/data\"",
+    "build": "npm run build --prefix frontend/data",
+    "start": "node backend/server.js"
   },
   "repository": {
     "type": "git",
