--- a/developer-dashboard-backend/package.json
+++ b/developer-dashboard-backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-     "start": "node server.js",
-  "dev": "npx nodemon server.js"
+     "start": "node index.js",
+  "dev": "npx nodemon index.js"
   },
   "author": "Karan",
   "license": "ISC",
